# avolo-cam

./: .gitignore  .mcp.json  CLAUDE.md  LOT-A-CHECKLIST.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERF_CHANGES_SUMMARY.md  PROJECT-STATUS.md  README.md  REDESIGN_SUMMARY.md  TODO.md  package.json
.claude/: settings.local.json
AvoCam/: README.md
AvoCam/AvoCam/Resources/: AvoCam.entitlements  Info.plist
AvoCam/AvoCam/Sources/: AppCoordinator.swift  AvoCamApp.swift
AvoCam/AvoCam/Sources/Capture/: CaptureManager.swift
AvoCam/AvoCam/Sources/Encode/: EncoderManager.swift
AvoCam/AvoCam/Sources/Models/: APIModels.swift  TelemetryCollector.swift
docs/: specs.md
ios-app/: SWIFTNIO_SERVER_TESTING.md
ios-app/AvoCam/: Package.swift
ios-app/AvoCam/AvoCam/: NDI-Bridging-Header.h
ios-app/AvoCam/AvoCam.xcodeproj/: project.pbxproj
ios-app/AvoCam/Resources/: Info.plist
ios-app/AvoCam/Sources/: AppCoordinator.swift
tauri-controller/: .env.development  DEAD_CODE_ANALYSIS.md  DEAD_CODE_CLEANUP_SUMMARY.md  DEBUG.md  MIGRATION.md  README.md  REDESIGN_SUMMARY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
tauri-controller/src/: App.svelte  App.svelte.backup  app.css
tauri-controller/src-tauri/: Cargo.toml  tauri.conf.json
tauri-controller/src-tauri/capabilities/: default.json
tauri-controller/src-tauri/icons/: icon.icns
tauri-controller/src-tauri/src/: camera_client.rs  camera_discovery.rs  camera_manager.rs  main.rs  models.rs
(+95 files in other folders)
