[package]
name = "avocam-controller"
version = "0.1.0"
description = "AvoCam Controller - Tauri desktop app for managing multiple NDI cameras"
authors = ["AvoCam"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# WebSocket client
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

# mDNS discovery
mdns-sd = "0.11"

# Additional utilities
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
